@@ -263,6 +263,7 @@ register.caption.displayname=Nom affich\u00E9
 register.caption.email=Couriel
 register.caption.firstname=First name
 register.caption.lastname=Last name (surname)
+register.caption.locale=Preferred country & language
 register.caption.newpassword=Nouveau mot de passe
 register.caption.oldpassword=Ancien mot de passe
 register.error.logininvalid=The login {0} is already in use.  Please choose another.
