@@ -263,6 +263,7 @@ register.caption.displayname=\u986F\u793A\u540D\u7A31
 register.caption.email=\u96FB\u5B50\u90F5\u4EF6
 register.caption.firstname=First name
 register.caption.lastname=Last name (surname)
+register.caption.locale=Preferred country & language
 register.caption.newpassword=\u65B0\u5BC6\u78BC
 register.caption.oldpassword=\u820A\u5BC6\u78BC
 register.error.logininvalid=The login {0} is already in use.  Please choose another.
