@@ -48,5 +48,6 @@ STATEMENT_CREATE_WIKI_USER_TABLE = \
       last_login_ip_address VARCHAR(15) NOT NULL, \
       is_admin INTEGER NOT NULL DEFAULT 0, \
       remember_key VARCHAR(100) NOT NULL, \
+      default_locale VARCHAR(8), \
       CONSTRAINT jam_pk_wiki_user PRIMARY KEY (wiki_user_id) \
     ) 
